force-app/main/default/objects/Student_Card__c/Student_Card__c.object-meta.xml
<CustomObject>
    <label>Student Card</label>
    <nameField>
        <displayFormat>SCI-{0000000000}</displayFormat>
        <label>Student Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Student Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>