force-app/main/default/objects/Student_Card__c/fields/Admission_Year__c.field-meta.xml
<CustomField>
    <fullName>Admission_Year__c</fullName>
    <formula>TEXT( YEAR( Student__r.Admission_Day__c ))</formula>
    <label>Admission Year</label>
    <type>Text</type>
</CustomField>