force-app/main/default/objects/Student_Card__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>Student__r.Acitvity_Class__r.Class_Name__c</formula>
    <label>Class</label>
    <type>Text</type>
</CustomField>