force-app/main/default/objects/Student_Card__c/fields/Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>Date_Of_Birth__c</fullName>
    <formula>Student__r.Date_Of_Birth__c</formula>
    <label>Date Of Birth</label>
    <type>Date</type>
</CustomField>