force-app/main/default/objects/Student_Card__c/fields/Faculty__c.field-meta.xml
<CustomField>
    <fullName>Faculty__c</fullName>
    <formula>Student__r.Faculty__r.Faculty_Name__c</formula>
    <label>Faculty</label>
    <type>Text</type>
</CustomField>