force-app/main/default/objects/Student_Card__c/fields/Id_Input__c.field-meta.xml
<CustomField>
    <fullName>Id_Input__c</fullName>
    <externalId>true</externalId>
    <label>Id Input</label>
    <length>9</length>
    <type>Text</type>
</CustomField>